--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -3,7 +3,7 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - master  # or main, depending on your default
+      - master
 
 jobs:
   build-and-push:
@@ -12,6 +12,10 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
+
+    - name: Extract Git SHA
+      id: vars
+      run: echo "sha_short=$(git rev-parse --short HEAD)" >> "$GITHUB_OUTPUT"
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
@@ -27,4 +31,6 @@ jobs:
       with:
         context: .
         push: true
-        tags: paritoshvikram/code_gen_hld:latest
+        tags: |
+          paritoshvikram/code_gen_hld:latest
+          paritoshvikram/code_gen_hld:${{ steps.vars.outputs.sha_short }}
