--- a/infra/.github/workflows/docker-build.yml
+++ b/infra/.github/workflows/docker-build.yml
@@ -3,38 +3,37 @@ name: CI/CD Docker Compose
 on:
   push:
     branches:
-      - master  # or main
+      - master
 
 jobs:
-  build-and-test:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Build with Docker Compose
-      run: docker compose -f docker-compose.yml build
+      - name: Build and Push CodeGen Service
+        uses: docker/build-push-action@v5
+        with:
+          context: ./code-gen
+          file: ./code-gen/Dockerfile
+          push: true
+          tags: paritoshvikram/code_gen_hld:latest
 
-    - name: Run container
-      run: docker compose up -d
-
-    - name: Wait for app to start
-      run: sleep 10
-
-    - name: Run tests (if any)
-      run: |
-        docker ps
-        # docker exec fastapi_app pytest  # If you have tests
-
-    - name: Push to Docker Hub
-      run: docker compose push || echo "Skipping push (optional step)"
+      - name: Build and Push Infra Service
+        uses: docker/build-push-action@v5
+        with:
+          context: ./infra
+          file: ./infra/Dockerfile
+          push: true
+          tags: paritoshvikram/infra:latest
