--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -3,26 +3,26 @@ name: CI/CD Docker Compose
 on:
   push:
     branches:
-      - master
+      - master  # Trigger on push to main branch
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: 🧾 Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Docker Buildx
+      - name: 🛠️ Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to Docker Hub
+      - name: 🔐 Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and Push CodeGen Service
+      - name: 🏗️ Build and Push CodeGen Service
         uses: docker/build-push-action@v5
         with:
           context: ./code-gen
@@ -30,10 +30,15 @@ jobs:
           push: true
           tags: paritoshvikram/code_gen_hld:latest
 
-      - name: Build and Push Infra Service
+      - name: 🏗️ Build and Push Infra Service
         uses: docker/build-push-action@v5
         with:
           context: ./infra
           file: ./infra/Dockerfile
           push: true
           tags: paritoshvikram/infra:latest
+
+      # Optional: If you want to validate that the docker-compose.yml builds correctly:
+      - name: 🧪 Test docker-compose build locally (optional)
+        run: |
+          docker-compose -f infra/docker-compose.yml config
